Spacing Fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   background-color: #282c34;
   color: white;
   font-size: 18px;
+  width: 100%;
+  margin: auto;
 }
 
 .carousel {
